--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -6,7 +6,6 @@
     <title>Number</title>
 </HEAD>
 <BODY>
-    <h1>Number</h1>
-    <p>{{ number }}</p>
+    <H1>Number: {{ n }}</H1>
 </BODY>
 </HTML>
