--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -3,10 +3,9 @@
 <HEAD>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number</title>
+    <title>Number Odd or Even</title>
 </HEAD>
 <BODY>
-    <H1>Number: {{ n }}</H1>
-    <H1>{% if n % 2 == 0 %} is even{% else %} is odd{% endif %}</H1>
+    <H1>Number: {{ n }} {% if n % 2 == 0 %} is even{% else %} is odd{% endif %}</H1>
 </BODY>
 </HTML>
