--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Odd or Even</title>
 </HEAD>
-<BODY>
-    <H1>Number: {{ n }} {% if n % 2 == 0 %} is even{% else %} is odd{% endif %}</H1>
-</BODY>
+<body>
+    <H1>Number: {{ n }} {% if n % 2 == 0 %} is even{% else %} is odd{% endif %}
+    </H1>
+</body>
 </HTML>
