--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -6,7 +6,7 @@
     <title>Number Odd or Even</title>
 </HEAD>
 <body>
-    <H1>Number: {{ n }} {% if n % 2 == 0 %} is even{% else %} is odd{% endif %}
-    </H1>
+    <h1>Number: {{ n }} {% if n % 2 == 0 %} is even{% else %} is odd{% endif %}
+    </h1>
 </body>
 </HTML>
