--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<HTML lang="en">
-<HEAD>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+<head>
     <title>Number Odd or Even</title>
-</HEAD>
+</head>
 <body>
-    <h1>Number: {{ n }}</h1> <h1>{% if n % 2 == 0 %}is even{% else %}is odd{% endif %}</h1>
+    <h1>Number: {{ n }} is {{ odd_or_even }}</h1>
 </body>
-</HTML>
+</html>
