--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,10 @@
     <title>Number Odd or Even</title>
 </head>
 <body>
-    <h1>Number: {{ n }} is {{ odd_or_even }}</h1>
+    {% if n is divisibleby 2 %}
+    <H1>Number: {{ n }} is even</H1>
+    {% else %}
+    <H1>Number: {{ n }} is odd</H1>
+    {% endif %}
 </body>
 </html>
