--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -3,11 +3,11 @@
 <head>
     <title>Number Odd or Even</title>
 </head>
-<body>
+<BODY>
     {% if n is divisibleby 2 %}
     <H1>Number: {{ n }} is even</H1>
     {% else %}
     <H1>Number: {{ n }} is odd</H1>
     {% endif %}
-</body>
+</BODY>
 </html>
